--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <div class="container">
             <!-- COLUMNS -->
             <div class="row">
-
                 <div class="col-md-5 col-sm-5 col-xs-5"><div class="box">1</div></div>
                 <div class="col-md-1 col-md-offset-3 col-sm-1 col-sm-offset-3 col-xs-1 col-xs-offset-5"><div class="box">1</div></div>
                 <div class="col-md-1 col-sm-1 hidden-xs"><div class="box">1</div></div>
@@ -35,7 +34,27 @@
             <div class="container">
                 <!-- COLUMNS -->
                 <div class="row">
-                    
+                    <!-- COL 1 -->
+                    <div class="pic">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Face-smile.png" alt="smile">
+                    </div>
+                    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
+                        <div class="box">START BOOTSTRAP</div>
+                    </div>
+                    <!-- COL 2 -->
+                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
+                        <div class="box">---*---</div>
+                    </div>
+                    <!-- COL 3 (1,2,3) -->
+                    <div class="col-md-4">
+                        <div class="box">GRAPHIC ARTIST</div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box">GRAPHIC ARTIST</div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box">GRAPHIC ARTIST</div>
+                    </div>
                 </div>
             </div>
         </section>
