--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-
+        <!-- SECTION START -->
         <section class="start-bootstrap">
             <!-- SECTION GRID -->
             <div class="container">
@@ -45,20 +45,84 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
                         <div class="box">---*---</div>
                     </div>
+                </div>
+                <div class="row">
                     <!-- COL 3 (1,2,3) -->
-                    <div class="col-md-4">
+                    <div class="col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-3 col-xs-2 col-xs-offset-3">
                         <div class="box">GRAPHIC ARTIST</div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="box">GRAPHIC ARTIST</div>
+                    <div class="col-md-2 col-sm-2 col-xs-2">
+                        <div class="box">WEB DESIGNER</div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="box">GRAPHIC ARTIST</div>
+                    <div class="col-md-2 col-sm-2 col-xs-2">
+                        <div class="box">ILLUSTRATOR</div>
+                    </div>
+                </div>
+        </section>
+
+        <!-- SECTION PORTFOLIO -->
+        <section class="portfolio">
+            <!-- SECTION GRID -->
+            <div class="container">
+
+                <!-- COLUMNS TEXT (1,2) -->
+                <div class="row">
+                    <!-- COL 1 -->
+                    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
+                        <div class="box">START BOOTSTRAP</div>
+                    </div>
+                    <!-- COL 2 -->
+                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
+                        <div class="box">---*---</div>
+                    </div>
+                </div>
+                
+                <!-- IMAGES COLUMNS-->
+                <div class="row">
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <img class="pics" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Face-smile.png" alt="smile">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <img  class="pics" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Face-smile.png" alt="smile">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <img class="pics" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Face-smile.png" alt="smile">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <img class="pics" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Face-smile.png" alt="smile">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <img class="pics" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Face-smile.png" alt="smile">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <img class="pics" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Face-smile.png" alt="smile">
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- SECTION ABOUT -->
+        <section class="about">
+            <!-- SECTION GRID -->
+            <div class="container">
+
+                <!-- COLUMNS -->
+                <div class="row">
+                    <!-- COL 1 -->
+                    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
+                        <div class="box">ABOUT</div>
+                    </div>
+                    <!-- COL 2 -->
+                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
+                        <div class="box">---*---</div>
+                    </div> 
+                </div>
+
+                <div class="row">
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
