--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="box">---*---</div>
                     </div>
                 </div>
-                
+
                 <!-- IMAGES COLUMNS-->
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-12">
@@ -119,10 +119,70 @@
                 </div>
 
                 <div class="row">
-
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius molestias at quaerat cum omnis sequi voluptates deserunt. Atque aut quasi, nam numquam, facilis placeat dolore ea recusandae corporis soluta obcaecati.</p>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius molestias at quaerat cum omnis sequi voluptates deserunt. Atque aut quasi, nam numquam, facilis placeat dolore ea recusandae corporis soluta obcaecati.</p>
+                    </div>
+                    <div class="col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 col-xs-2 col-xs-offset-5">
+                        <div class="box">Download</div>
+                    </div>
                 </div>
             </div>
         </section>
+
+        <!-- SECTIOIN CONTACT -->
+        <section class="contact">
+            <!-- SECTION GRID -->
+            <div class="container">
+                
+                <!-- COLUMNS -->
+                <div class="row">
+                    <!-- COL 1 -->
+                    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
+                        <div class="box">CONTACT ME</div>
+                    </div>
+                    <!-- COL 2 -->
+                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
+                        <div class="box">---*---</div>
+                    </div> 
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Name</div></div>
+                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Email Adress</div></div>
+                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Phone Number</div></div>
+                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Message</div></div>
+                    <div class="col-md-2 col-sm-2 col-xs-2"><div class="box">Message</div></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- LAST SECTION -->
+        <section class="last-section">
+            <!-- SECTION GRID -->
+            <div class="container">
+                <!-- COL 1 (1,2) -->
+                <div class="row">
+                    <div class="col-md-4 col-sm-6 col-xs-12"><div class="box">Location</div></div>
+                    <div class="col-md-4 col-sm-6 col-xs-12"><div class="box">AROUND THE WEB</div></div>
+                    <div class="col-md-4 col-sm-6 col-xs-12"><div class="box">ABOUT FREELANCER</div></div>
+                </div>
+            </div>
+        </section>
+
     </main>
+
+    <footer>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 col-xs-2 col-xs-offset-5">
+                    <div class="box">COPYRIGHT</div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
