--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     
     <nav class="navbar navbar-default navbar-custom">
-        <div class="container">
+        <div class="container navbar-padding">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
+          <div class="navbar-header hover-none">
               <!-- HAMBURGER -->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -24,12 +24,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand text-white" href="#">START BOOTSTRAP</a>
+            <p class="navbar-brand text-white text-size-left">START BOOTSTRAP</p>
           </div>
       
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right text-white">
+            <ul class="nav navbar-nav navbar-right text-white text-size-right">
               <li><a href="#">PORTFOLIO</a></li>
               <li><a href="#">ABOUT</a></li>
               <li><a href="#">CONTACT</a></li>
