start-contact-section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-default navbar-custom navbar-margin">
             <div class="container navbar-padding">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header hover-none">
+            <div class="navbar-header">
                 <!-- HAMBURGER -->
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -117,16 +117,17 @@
                 </div>
 
                 <div class="row about-text">
-                    <div class="col-md-6 col-sm-6 col-xs-12 text-white">
-                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customisation</p>
+                    <div class="col-lg-6 col-md-6 col-md-offset-0 col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2 text-white">
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customisation.</p>
                     </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12 text-white">
+                    <div class="col-lg-6 col-md-6 col-md-offset-0 col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2 text-white">
                         <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
-                    <div class="col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 col-xs-2 col-xs-offset-5">
-                        <div class="box">Download</div>
-                    </div>
                 </div>
+                <div class="btn-download">
+                    <a class="btn btn-default btn-custom" href="#" role="button"><i class="fas fa-download"></i>Download</a>
+                </div>
+                
             </div>
         </section>
 
