--- a/index.html
+++ b/index.html
@@ -134,38 +134,65 @@
         <!-- SECTIOIN CONTACT -->
         <section class="contact">
             <!-- SECTION GRID -->
-            <div class="container">
-                
-                <!-- COLUMNS -->
-                <div class="row">
-                    <!-- COL 1 -->
-                    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                        <div class="box">CONTACT ME</div>
+        <div class="container">
+                <div class="portfolio">
+                    <h2>CONTACT ME</h2>
+                    <div class="star-2">
+                        <i class="fas fa-star"></i>
                     </div>
-                    <!-- COL 2 -->
-                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
-                        <div class="box">---*---</div>
-                    </div> 
                 </div>
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Name</div></div>
-                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Email Adress</div></div>
-                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Phone Number</div></div>
-                    <div class="col-md-12 col-sm-12 col-xs-12"><div class="box">Message</div></div>
-                    <div class="col-md-2 col-sm-2 col-xs-2"><div class="box">Message</div></div>
-                </div>
+            <div class="row">
+                <form class="registration-form col-lg-12 col-md-12 col-sm-10 col-sm-offset-1 col-xs-8 col-xs-offset-2">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="number">Phone Number</label>
+                        <input type="number" class="form-control" id="number">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default btn-send btn-custom-send">Send</button>
+                </form>   
             </div>
+         </div>
         </section>
 
-        <!-- LAST SECTION -->
-        <section class="last-section">
-            <!-- SECTION GRID -->
+        <section class="site-info">
             <div class="container">
-                <!-- COL 1 (1,2) -->
                 <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-12"><div class="box">Location</div></div>
-                    <div class="col-md-4 col-sm-6 col-xs-12"><div class="box">AROUND THE WEB</div></div>
-                    <div class="col-md-4 col-sm-6 col-xs-12"><div class="box">ABOUT FREELANCER</div></div>
+                    <div class="text-white location col-lg-4 col-md-4 col-sm-4">
+                        <h3>location</h3>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
+                    </div>
+                    <div class="text-white around col-lg-4 col-md-4 col-sm-4">
+                       <h3>around the web</h3>
+                        <ul class="social-icons">
+                            <li>
+                                <i class="fab fa-facebook-f"></i>
+                            </li>
+                            <li>
+                                <i class="fab fa-google-plus-g"></i>
+                            </li>
+                            <li>
+                                <i class="fab fa-twitter"></i>
+                            </li>
+                            <li>
+                                <i class="fab fa-linkedin-in"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="text-white freelancer col-lg-4 col-md-4 col-sm-4">
+                        <h3>about freelancer</h3>
+                        <p>Freelance is a free to use,open source Bootstrap theme created by <span>Start Bootstrap</span></p> 
+                    </div>
                 </div>
             </div>
         </section>
