--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
                        <h3>around the web</h3>
                         <ul class="social-icons">
                             <li>
-                                <i class="fab fa-facebook-f"></i>
+                               <a href=""><i class="fab fa-facebook-f"></i></a> 
                             </li>
                             <li>
-                                <i class="fab fa-google-plus-g"></i>
+                               <a href=""><i class="fab fa-google-plus-g"></i></a> 
                             </li>
                             <li>
-                                <i class="fab fa-twitter"></i>
+                               <a href=""><i class="fab fa-twitter"></i></a> 
                             </li>
                             <li>
-                                <i class="fab fa-linkedin-in"></i>
+                               <a href=""><i class="fab fa-linkedin-in"></i></a> 
                             </li>
                         </ul>
                     </div>
@@ -200,15 +200,9 @@
     </main>
 
     <footer>
-
         <div class="container">
-            <div class="row">
-                <div class="col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 col-xs-2 col-xs-offset-5">
-                    <div class="box">COPYRIGHT</div>
-                </div>
-            </div>
+            <h5>Copyright &copy; Your Website 2019</h5>
         </div>
-
     </footer>
 </body>
 </html>
